--- a/home.html
+++ b/home.html
@@ -2,10 +2,23 @@
 <html>
 
 <head>
+	<title> Resume </title>
 </head>
 
 <body>
-sdfasdfasdf
-</body
+	<style>
+		object {
+			height: 100%;
+			width: 80%;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	</style>
+	<div>
+		<object data="Resume.pdf" type="application/pdf">
+  			<p>Alternative text - include a link <a href="Resume.pdf">to the PDF!</a></p>
+		</object>
+	</div>
+</body>
 
 </html>
