--- a/home.html
+++ b/home.html
@@ -3,21 +3,27 @@
 
 <head>
 	<title> Resume </title>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="home.css" rel="stylesheet">
 </head>
 
 <body>
-	<style>
-		object {
-			height: 100%;
-			width: 80%;
-			margin-left: auto;
-			margin-right: auto;
-		}
-	</style>
-	<div>
-		<object data="Resume.pdf" type="application/pdf">
-  			<p>Alternative text - include a link <a href="Resume.pdf">to the PDF!</a></p>
-		</object>
+    <div class="profile-bg">
+        <h1> Kelly Idouchi </h1>
+        <img id="skyline" src="nycskyline.jpg">
+        <img id="mypic" src="profile.jpg">
+    </div>
+    
+    <span> 
+        <h2> About Me </h2>
+        <p>I am a programmer . I grew up in New York for most of my life. </p>
+    </span>
+
+	<div class="resume-block">
+        <button type="button" class="btn btn-default btn-lg download">
+            <span class="glyphicon glyphicon-save" aria-hidden="true"></span> Download
+        </button>
+        <img id="resume" src="Resume.png" width="80%" height="70%">
 	</div>
 </body>
 
