linked icons to proroper websites and did some cleaning

--- a/index.html
+++ b/index.html
@@ -17,19 +17,29 @@
 <!--        </div>-->
         <h1 class="myname"> Kelly Idouchi </h1>
         <div class="icons">
-            <img class="icon" src="facebook-icon.png">
-            <img class="icon" src="linkedin-icon.png">
-            <img class="icon" src="bitbucket-icon.png">
-            <img class="icon" src="github-icon.gif">
+            <a href="http://www.facebook.com/kidouchi"><img class="icon" src="facebook-icon.png"></a>
+            <a href="https://www.linkedin.com/pub/kelly-idouchi/65/4ab/a43">
+<img class="icon" src="linkedin-icon.png"></a>
+            <a href="http://www.bitbucket.com/kidouchi"><img class="icon" src="bitbucket-icon.png"></a>
+            <a href="http://www.github.com/kidouchi"><img class="icon" src="github-icon.png"></a>
         </div>
         <img id="skyline" src="nycskyline.jpg">
         <img id="mypic" src="profile.jpg">
     </div>
     
-    <span class="aboutme"> 
+    <div class="aboutme"> 
         <h2> About Me </h2>
-        <p class="about-info"> I am a programmer and dog lover. I grew up in New York for most of my life. Currently, I am a senior at Carnegie Mellon University studying Computer Science. To see some of my projects, checkout the github and bitbucket link above. </p>
-    </span>
+        <p class="info"> I am a programmer, experimenter, and dog lover. Whenever I have time, I like to play around with different web stuff &amp; designs or just reading up on some good stories. Currently, I am a senior at Carnegie Mellon University studying Computer Science and hoping to obtain a Japanese minor. To see some of my projects, check out the github and bitbucket link above.  </p>
+    </div>
+    <div class="classes">
+        <h2> Classes </h2>
+        <p class="info"> Some classes that I have taken are : <a href="http://www.cs.cmu.edu/~./15-437/2014-fall/">Web Application Development</a>, <a href="http://www.cs.cmu.edu/~15451/">Algorithm Design &amp; Analysis</a>, <a href="http://www.cs.cmu.edu/~ckaestne/15313/2014/">Foundations of Software Engineering</a>, <a href="http://www.cs.cmu.edu/afs/cs/academic/class/15213-s13/www/schedule.html">Introduction to Computer Systems</a>.</p> 
+        <p class="info">I am currently taking : <a href="http://www.cs.cmu.edu/~dga/15-440/S14/">Distributed Systems (Link to be updated)</a>, <a href="">Mobile Game Development (Link to be updated)</a>, <a href="http://www.cs.cmu.edu/~lblum/flac/">Formal Languages, Automata &amp; Computation (Link to be updated)</a>.</p>
+    </div>
+    <div class="work">
+        <h2> Work </h2>
+        <p class="info">Last summer, I interned at Google Adwords where I worked on re-designing and implementing a servlet in order to optimize load times. Prior to that, I researched at Carnegie Mellon's Cylab, where I mainly made finding vulnerabilities like private RSA keys and passwords in routers and networks switches more automated. I also researched at Carnegie Mellon's Collaborative Innovation Center. </p>
+    </div>
 
 	<div class="resume-block">
         <a href="Resume.pdf" type="button" class="btn btn-default btn-lg download">
