--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="classes">
         <h2> Classes </h2>
         <p class="info"> Some classes that I have taken are : <a href="http://www.cs.cmu.edu/~./15-437/2014-fall/">Web Application Development</a>, <a href="http://www.cs.cmu.edu/~15451/">Algorithm Design &amp; Analysis</a>, <a href="http://www.cs.cmu.edu/~ckaestne/15313/2014/">Foundations of Software Engineering</a>, <a href="http://www.cs.cmu.edu/afs/cs/academic/class/15213-s13/www/schedule.html">Introduction to Computer Systems</a>.</p> 
-        <p class="info">I am currently taking : <a href="http://www.cs.cmu.edu/~dga/15-440/S14/">Distributed Systems (Link to be updated)</a>, <a href="">Mobile Game Development (Link to be updated)</a>, <a href="http://www.cs.cmu.edu/~lblum/flac/">Formal Languages, Automata &amp; Computation (Link to be updated)</a>.</p>
+        <p class="info">I am currently taking : <a href="http://www.cs.cmu.edu/~15-610/">Distributed Systems</a>, <a href="">Mobile Game Development (Link to be updated)</a>, <a href="http://www.contrib.andrew.cmu.edu/~okahn/flac-s15/index.html">Formal Languages, Automata &amp; Computation</a>.</p>
     </div>
     <div class="work">
         <h2> Work </h2>
