fixed header spacing

--- a/index.html
+++ b/index.html
@@ -4,27 +4,26 @@
 <head>
 	<title> Resume </title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="home.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="profile.js"></script> 
 </head>
 
 <body>
-    <div class="profile-bg">
-<!--        <div class="nav-btn">-->
-<!--            About-->
-<!--        </div>-->
-        <h1 class="myname"> Kelly Idouchi </h1>
-        <div class="icons">
+    <div id="profile-bg">
+        <div id="my-name"><h1> Kelly Idouchi </h1></div>
+        <div id="icons">
             <a href="http://www.facebook.com/kidouchi"><img class="icon" src="facebook-icon.png"></a>
-            <a href="https://www.linkedin.com/pub/kelly-idouchi/65/4ab/a43">
-<img class="icon" src="linkedin-icon.png"></a>
+            <a href="https://www.linkedin.com/pub/kelly-idouchi/65/4ab/a43"><img class="icon" src="linkedin-icon.png"></a>
             <a href="http://www.bitbucket.com/kidouchi"><img class="icon" src="bitbucket-icon.png"></a>
             <a href="http://www.github.com/kidouchi"><img class="icon" src="github-icon.png"></a>
         </div>
         <img id="skyline" src="nycskyline.jpg">
-        <img id="mypic" src="profile.jpg">
+        <div id="profile-style">
+            <div id="white-circle"></div>
+            <img id="mypic" src="profile.jpg">
+        </div>
     </div>
     
     <div class="aboutme"> 
