--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
 
     <!-- PERSONAL SUMMARY -->
     <div class="aboutme">
-        <img id="aboutme-img" src="face.png"/>
+        <img class="section-img" src="face.png"/>
         <h2> About Me </h2>
         <p class="info"> I am a programmer and experimenter. Whenever I have time, I like to study up on my web technologies &amp; designs techniques. I am a recent graduate from Carnegie Mellon University with a B.S. Computer Science degree. To see some of my projects, check out the github and bitbucket links above. I have recently taken an interest in Android Development.</p>
     </div>
 
     <!-- CLASSES I'VE TAKEN -->
     <div class="classes">
-        <img id="classes-img" src="books.png"/>
+        <img class="section-img" src="books.png"/>
         <h2> Classes </h2>
         <p class="info"> Some classes that I have taken are : <a href="http://www.cs.cmu.edu/~./15-437/2014-fall/">Web Application Development</a>, <a href="http://www.cs.cmu.edu/~15451/">Algorithm Design &amp; Analysis</a>, <a href="http://www.cs.cmu.edu/~ckaestne/15313/2014/">Foundations of Software Engineering</a>, <a href="http://www.cs.cmu.edu/afs/cs/academic/class/15213-s13/www/schedule.html">Introduction to Computer Systems</a>, <a href="http://www.cs.cmu.edu/~15-610/">Distributed Systems</a>, <a href="http://www.contrib.andrew.cmu.edu/~okahn/flac-s15/index.html">Formal Languages, Automata &amp; Computation</a>.</p>
     </div>
 
     <!-- WORK SUMMARY -->
     <div class="work">
-        <img id="work-img" src="laptop.png"/>
+        <img class="section-img" src="laptop.png"/>
         <h2> Work </h2>
         <p class="info">Last summer, I interned at Google Adwords where I worked on re-designing and implementing a servlet in order to optimize load times. Prior to that, I researched at Carnegie Mellon's Cylab, where I mainly made finding vulnerabilities like private RSA keys and passwords in routers and networks switches more automated. I also researched at Carnegie Mellon's Collaborative Innovation Center.</p>
     </div>
 
     <!-- RESUME -->
 	<div class="resume-block">
-        <a href="Resume.pdf" class="btn btn-default btn-lg glyphicon glyphicon-save download">
-            <button> Download </button>
-        </a>
+        <div id="download-button">
+            <a href="Resume.pdf" type="button" class="btn btn-default btn-lg glyphicon glyphicon-save">Download</a>
+        </div>
         <img id="resume" src="Resume.png" width="80%" height="70%">
 	</div>
 </body>
