removed download button

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
     <!-- RESUME -->
 	<div class="resume-block">
-        <div id="download-button">
+        <!-- <div id="download-button">
             <a href="Resume.pdf" type="button" class="btn btn-default btn-lg glyphicon glyphicon-save">Download</a>
-        </div>
+        </div> -->
         <img id="resume" src="Resume.png" width="80%" height="70%">
 	</div>
 </body>
