added android icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="aboutme">
         <img class="section-img" src="face.png"/>
         <h2> About Me </h2>
-        <p class="info"> I am a programmer and experimenter. Whenever I have time, I like to study up on my web technologies &amp; designs techniques. I am a recent graduate from Carnegie Mellon University with a B.S. Computer Science degree. To see some of my projects, check out the github and bitbucket links above. I have recently taken an interest in Android Development.</p>
+        <p class="info"> I am a programmer and experimenter. Whenever I have time, I like to study up on my web technologies &amp; designs techniques. I am a recent graduate from Carnegie Mellon University with a B.S. Computer Science degree. To see some of my projects, check out the github and bitbucket links above. I have recently taken an interest in Android Development <img id="android-img" src="android.png"/></p>
     </div>
 
     <!-- CLASSES I'VE TAKEN -->
