updated font style

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img class="section-img" src="books.png"/>
         <h2> Learning </h2>
         <p class="info"> Some classes that I have taken are : <a href="http://www.cs.cmu.edu/~./15-437/2014-fall/">Web Application Development</a>, <a href="http://www.cs.cmu.edu/~15451/">Algorithm Design &amp; Analysis</a>, <a href="http://www.cs.cmu.edu/~ckaestne/15313/2014/">Foundations of Software Engineering</a>, <a href="http://www.cs.cmu.edu/afs/cs/academic/class/15213-s13/www/schedule.html">Introduction to Computer Systems</a>, <a href="http://www.cs.cmu.edu/~15-610/">Distributed Systems</a>, <a href="http://www.contrib.andrew.cmu.edu/~okahn/flac-s15/index.html">Formal Languages, Automata &amp; Computation</a>.</p>
-        <p> I am currently self-learning Android Development, Front End Development, and good Web Designs. </p>
+        <p class="info"> I am currently self-learning Android Development, Front End Development, and good Web Designs. </p>
     </div>
 
     <!-- WORK SUMMARY -->
