update icon animation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="index.css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="profile.js"></script> 
+    <!-- <script src="profile.js"></script>  -->
 </head>
 
 <body>
@@ -15,29 +15,29 @@
     <div id="profile-bg">
         <div id="my-name"><h1> Kelly Idouchi </h1></div>
         <div id="icons">
-            <a href="http://www.facebook.com/kidouchi"><img class="icon" src="facebook-icon.png"></a>
-            <a href="https://www.linkedin.com/pub/kelly-idouchi/65/4ab/a43"><img class="icon" src="linkedin-icon.png"></a>
-            <a href="http://www.bitbucket.com/kidouchi"><img class="icon" src="bitbucket-icon.png"></a>
-            <a href="http://www.github.com/kidouchi"><img class="icon" src="github-icon.png"></a>
+            <a href="http://www.facebook.com/kidouchi"><img class="icon" src="images/icons/facebook-icon.png"></a>
+            <a href="https://www.linkedin.com/pub/kelly-idouchi/65/4ab/a43"><img class="icon" src="images/icons/linkedin-icon.png"></a>
+            <a href="http://www.bitbucket.com/kidouchi"><img class="icon" src="images/icons/bitbucket-icon.png"></a>
+            <a href="http://www.github.com/kidouchi"><img class="icon" src="images/icons/github-icon.png"></a>
         </div>
-        <img id="skyline" src="nycskyline.jpg">
+        <img id="skyline" src="images/nycskyline.jpg">
         <div id="profile-style">
             <div id="white-circle"></div>
-            <img id="mypic" src="profile.jpg">
+            <img id="mypic" src="images/profile.jpg">
         </div>
     </div>
 
     <!-- PERSONAL SUMMARY -->
     <div class="aboutme">
-        <img class="section-img" src="face.png"/>
+        <img class="section-img" src="images/icons/face.png"/>
         <h2> About Me </h2>
         <p class="info"> I am a programmer and experimenter. Whenever I have time, I like to study up on my web technologies &amp; designs techniques. I am a recent graduate from Carnegie Mellon University with a B.S. Computer Science degree. To see some of my projects, check out the github and bitbucket links above. I have recently taken an interest in Android Development.</p>
-        <img id="android-img" src="android.png"/>
+        <img id="android-img" src="images/icons/android.png"/>
     </div>
 
     <!-- CLASSES I'VE TAKEN -->
     <div class="learning">
-        <img class="section-img" src="books.png"/>
+        <img class="section-img" src="images/icons/books.png"/>
         <h2> Learning </h2>
         <p class="info"> Some classes that I have taken are : <a href="http://www.cs.cmu.edu/~./15-437/2014-fall/">Web Application Development</a>, <a href="http://www.cs.cmu.edu/~15451/">Algorithm Design &amp; Analysis</a>, <a href="http://www.cs.cmu.edu/~ckaestne/15313/2014/">Foundations of Software Engineering</a>, <a href="http://www.cs.cmu.edu/afs/cs/academic/class/15213-s13/www/schedule.html">Introduction to Computer Systems</a>, <a href="http://www.cs.cmu.edu/~15-610/">Distributed Systems</a>, <a href="http://www.contrib.andrew.cmu.edu/~okahn/flac-s15/index.html">Formal Languages, Automata &amp; Computation</a>.</p>
         <p class="info"> I am currently self-learning Android Development, Front End Development, and good Web Designs. </p>
@@ -45,7 +45,7 @@
 
     <!-- WORK SUMMARY -->
     <div class="work">
-        <img class="section-img" src="laptop.png"/>
+        <img class="section-img" src="images/icons/laptop.png"/>
         <h2> Work </h2>
         <p class="info">Last summer, I interned at Google Adwords where I worked on re-designing and implementing a servlet in order to optimize load times. Prior to that, I researched at Carnegie Mellon's Cylab, where I mainly made finding vulnerabilities like private RSA keys and passwords in routers and networks switches more automated. I also researched at Carnegie Mellon's Collaborative Innovation Center.</p>
     </div>
@@ -55,7 +55,7 @@
         <!-- <div id="download-button">
             <a href="Resume.pdf" type="button" class="btn btn-default btn-lg glyphicon glyphicon-save">Download</a>
         </div> -->
-        <img id="resume" src="Resume.png" width="80%" height="70%">
+        <img id="resume" src="images/Resume.png" width="80%" height="70%">
 	</div>
 </body>
 
