--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="index.css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <!-- <script src="profile.js"></script>  -->
+    <script src="profile.js"></script> 
 </head>
 
 <body>
