added android temp project icon

--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
     
     <div class="section-header" id="section-3"> 
         <div class="left-divider"></div>
-        <h1> PROJECTS (COMING SOON) </h1>
+        <h1> PROJECTS </h1> <br>
         <a class="up-button" href="#top"><img src="images/icons/up_arrow.png">TOP</a>
+        <div id="temp-android">
+            <h1 id="coming-soon-header">COMING SOON</h1>
+            <img id="android-project" src="images/icons/android.png"/>
+        </div>
     </div>
     <br><br>
 </body>
