changed up button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="section-header" id="section-2">
         <div class="left-divider"></div>
         <h1> RESUME </h1>
-        <a class="up-button" href="#top"><img src="images/icons/up_arrow.png">TOP</a>
+        <a class="up-button" href="#top"><img src="images/icons/down_arrow.png"></a>
     </div>
 	<div class="resume-block">
         <div class="download-block">
@@ -74,11 +74,11 @@
     <div class="section-header" id="section-3"> 
         <div class="left-divider"></div>
         <h1> PROJECTS </h1> <br>
-        <a class="up-button" href="#top"><img src="images/icons/up_arrow.png">TOP</a>
-        <div id="temp-android">
-            <h1 id="coming-soon-header">COMING SOON</h1>
-            <img id="android-project" src="images/icons/android.png"/>
-        </div>
+        <a class="up-button" href="#top"><img src="images/icons/down_arrow.png"></a>
+    </div>
+    <div id="temp-android">
+        <h1 id="coming-soon-header">COMING SOON</h1>
+        <img id="android-project" src="images/icons/android.png"/>
     </div>
     <br><br>
 </body>
