--- a/index.html
+++ b/index.html
@@ -73,14 +73,21 @@
     
     <div class="section-header" id="section-3"> 
         <div class="left-divider"></div>
-        <h1> PROJECTS </h1> <br>
-        <a class="up-button" href="#top"><img src="images/icons/down_arrow.png"></a>
+        <h1> PERSONAL PROJECTS </h1>
+        <a class="up-button" href="#top"><img src="images/icons/down_arrow.png"/></a>
     </div>
-    <div id="temp-android">
-        <h1 id="coming-soon-header">COMING SOON</h1>
-        <img id="android-project" src="images/icons/android.png"/>
-    </div>
-    <br><br>
+    
+    <div class="project-section">
+        <div class="app-card android">
+            NoteIt <img src="images/icons/noteit_app_icon.png"/>
+            <a class="app_redirect_button android" type="button" href="https://play.google.com/store/apps/details?id=kidouchi.noteit">Visit Site</a>
+        </div>
+        <div class="app-card apple">
+            Test Card
+            <img src="images/icons/test_app.png"/>
+            <a class="app_redirect_button apple" type="button" href="#">Visit Site</a>
+        </div>
+    </div> 
 </body>
 
 <footer> @ 2015 Kelly Idouchi </footer>
