--- a/index.html
+++ b/index.html
@@ -73,19 +73,26 @@
     
     <div class="section-header" id="section-3"> 
         <div class="left-divider"></div>
-        <h1> PERSONAL PROJECTS </h1>
+        <h1> PROJECTS </h1>
         <a class="up-button" href="#top"><img src="images/icons/down_arrow.png"/></a>
     </div>
     
     <div class="project-section">
+        <!-- NoteIt Android App Card -->
         <div class="app-card android">
             NoteIt <img src="images/icons/noteit_app_icon.png"/>
             <a class="app_redirect_button android" type="button" href="https://play.google.com/store/apps/details?id=kidouchi.noteit">Visit Site</a>
         </div>
+        <!-- Test Apple App Card -->
         <div class="app-card apple">
             Test Card
             <img src="images/icons/test_app.png"/>
             <a class="app_redirect_button apple" type="button" href="#">Visit Site</a>
+        </div>
+        <div class="app-card django">
+            Grumblr
+            <img style="padding-top:50px; padding-bottom:60px;" src="images/icons/grumblr.png"/>
+            <a class="app_redirect_button django" type="button" href="https://kidouchi-grumblr.herokuapp.com/">Visit Site</a>
         </div>
     </div> 
 </body>
