--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <!-- PROFILE HEADER -->
     <div class="header" id="top">
         <div id="navbar">
-            <a href="#section-1">About Me</a>
-            <a href="#section-2">Resume</a>
-            <a href="#section-3">Projects</a>
+            <ul class="group header-items">
+                <li class="current-item"><a href="#section-1">About Me</a></li>
+                <li><a href="#section-2">Resume</a></li>
+                <li><a href="#section-3">Projects</a></li>
+            </ul>
         </div>
         <div id="my-name"><h1> Kelly Idouchi </h1></div>
         <div id="icons">
