--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="col work">
                         <img class="section-img" src="images/icons/laptop.png"/>
                         <h2> Work </h2>
-                        <p class="info">I interned at Google Adwords where I worked on re-designing and implementing a servlet in order to optimize load times. Prior to that, I researched at Carnegie Mellon's Cylab, where I mainly made finding vulnerabilities like private RSA keys and passwords in routers and networks switches more automated. I also researched at Carnegie Mellon's Collaborative Innovation Center.</p>
+                        <p class="info">I interned at Google Adwords where I worked on re-designing and implementing a servlet in order to optimize load times. Prior to that, I researched at Carnegie Mellon's Cylab, where I worked  on finding vulnerabilities like private RSA keys and passwords in routers and networks switches automated. I also researched at Carnegie Mellon's Collaborative Innovation Center.</p>
                     </div>
                 </div> <!--.info-section-->
             </div> <!--#personal-sec"-->
