added images and parallax bg headers

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <img id="skyline" src="images/nycskyline-2.jpg">
         <div id="profile-style">
-            <div id="white-circle"></div>
+            <div class="profile-border-circle"></div>
             <img id="mypic" src="images/profile.jpg">
         </div>
     </div>
@@ -37,14 +37,17 @@
         </div>
         <div class="page-body flex-item">
             <!-- PERSONAL SUMMARY -->
-            <div id="personal-sec" class="scroll-view-animate-elem">
-                <div class="info-section" id="section-1">
+            <div id="section-1" class="parallax-fixed-bg fixed-bg-1">
+                <h1> About </h1>
+            </div>
+            <div id="personal-sec" class="scroll-view-animate-elem parallax-scrolling-bg">
+                <div class="info-section">
                     <div class="col aboutme">
                         <img class="section-img" src="images/icons/face.png"/>
                         <h2> About Me </h2>
                         <p class="info"> I am a programmer and avid learner who likes to work hard and play hard. Whenever I have time, I like to study up on web technologies &amp; various designs techniques. I am a recent graduate from Carnegie Mellon University with a B.S. Computer Science degree. To see some of my projects, check out the github and bitbucket links above. I have recently taken an interest in Android Development.</p>
                         <img id="android-img" src="images/icons/android.png"/>
-                    </div>
+                    </div> <!-- .col .aboutme -->
 
                     <!-- CLASSES I'VE TAKEN -->
                     <div class="col learning">
@@ -64,11 +67,16 @@
             </div> <!--#personal-sec"-->
 
             <!-- RESUME -->
-            <div id="resume-sec" class="scroll-view-animate-elem">
+            <div id="section-2" class="parallax-fixed-bg fixed-bg-2">
+                <h1> Resume </h1>
+            </div>
+            <div id="resume-sec" class="scroll-view-animate-elem parallax-scrolling-bg">
+<!--
                 <div class="section-header" id="section-2">
                     <div class="left-divider"></div>
                     <h1> RESUME </h1>
                 </div>
+-->
                 <div class="resume-block">
                     <div class="download-block">
                         <a class="download-btn black" href="Resume.pdf" type="button"> Download</a>
@@ -80,11 +88,16 @@
             </div>  
             
             <!-- PROJECTS -->
-            <div id="projects-sec" class="scroll-view-animate-elem">
+            <div id="section-3" class="parallax-fixed-bg fixed-bg-3">
+                <h1> Projects </h1>
+            </div>
+            <div id="projects-sec" class="scroll-view-animate-elem parallax-scrolling-bg">
+<!--
                 <div class="section-header" id="section-3"> 
                     <div class="left-divider"></div>
                     <h1> PROJECTS </h1>
                 </div>
+-->
                 <div class="project-section">
             <!-- NoteIt Android App Card -->
             <div class="app-card android">
