--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="http://www.bitbucket.com/kidouchi"><img class="icon bitbucket" src="images/icons/bitbucket-icon.png"></a>
             <a href="http://www.github.com/kidouchi"><img class="icon github" src="images/icons/github-icon.png"></a>
         </div>
-        <img id="skyline" src="images/nycskyline-2.jpg">
+        <img id="skyline" src="images/nycskyline-2.png">
         <div id="profile-style">
             <div class="profile-border-circle"></div>
             <img id="mypic" src="images/profile.jpg">
