--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title> Resume </title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
+    <!-- Prefetch images -->
+<!--    <link rel="prefetch" href="images/brooklyn-bridge-at-night.jpeg">-->
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="index.js"></script> 
@@ -24,6 +26,7 @@
         <div id="profile-style">
             <div class="profile-border-circle"></div>
             <img id="mypic" src="images/profile.jpg">
+            <a id="contact-me"></a>
         </div>
     </div>
 
