updates brooklyn progressive image

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title> Resume </title>
+	<title> Personal Website </title>
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <!-- Prefetch images -->
