change email modal message

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="modal" class="modal-view" data-backdrop="static">
         <div id="contact-modal" class="window">
             <div class="contents">
-                <h2>Hit me up!</h2>
+                <h2>Message me!</h2>
                 <form action="//formspree.io/kidouchi@andrew.cmu.edu"
                       method="POST">
                     <input type="email" name="_replyto" placeholder="Your Email"><br>
