--- a/index.html
+++ b/index.html
@@ -32,22 +32,29 @@
         </div>
     </div>
 
-    <!-- Contact Form Modal -->
+    <!-- ****** Contact Form Modal ****** -->
     <div id="modal" class="modal-view" data-backdrop="static">
         <div id="contact-modal" class="window">
             <div class="contents">
-                <h2>Message me!</h2>
-                <form action="//formspree.io/kidouchi@andrew.cmu.edu"
-                      method="POST">
-                    <input type="email" name="_replyto" placeholder="Your Email"><br>
-                    <textarea name="message" rows="5" placeholder="Your Message"></textarea><br>
-                    <input type="text" name="_gotcha" style="display:none" />
-                    <button id="modal-send-btn" type="submit" value="Send">Send</button>
-                    <a id="close-modal">Close</a>
-                </form>
+                <div class="form-container">
+                    <h2>Message me!</h2>
+                    <form id="message-form">
+                        <input type="email" name="_replyto" placeholder="Your Email"><br>
+                        <textarea name="message" rows="5" placeholder="Your Message"></textarea><br>
+                        <input type="text" name="_gotcha" style="display:none" />
+                        <input type="hidden" name="_next" value="email-sent-page.html" />
+                        <button id="modal-send-btn" type="submit" value="Send">Send</button>
+                        <a id="close-modal">Close</a>
+                    </form>
+                </div>
+                <div class="success-message">
+                    <h3> Your message was sent successfully! </h3>
+                </div>
             </div>
         </div>
+        
     </div>
+    <!-- ****** Contact Form Modal ****** -->
     
     <div class="main-body flex-container">
         <div id="navbar" class="flex-item">
