--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <div class="success-message">
                     <h3> Your message was sent successfully! </h3>
                 </div>
+                <div class="error-message">
+                    <h3> Something happened :( Please try again. </h3>
+                </div>
             </div>
         </div>
         
